feat: add neon Planet Python SVG logo in HUD and styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <div id="hud">
-    <div class="logo">PYTHON PLANET</div>
+    <div class="logo">
+      <img src="assets/planet-python-logo.svg" alt="Planet Python logo" class="logo-mark" />
+      <span class="logo-text">PYTHON PLANET</span>
+    </div>
     <div class="stats">
       <span id="xp">XP: 0</span>
       <span id="coins">Coins: 0</span>
