feat: enlarge HUD logo and embed neon center image inside 3D sphere (configurable via data-center-image)

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="legend">Click a glowing node to travel • Complete a stage to unlock the next</div>
   </div>
 
-  <canvas id="world" width="1200" height="700" aria-label="3D coding planet canvas"></canvas>
+  <canvas id="world" width="1200" height="700" aria-label="3D coding planet canvas" data-center-image="assets/python-mark-neon.svg"></canvas>
 
   <div id="ui-overlay" class="hidden" aria-live="polite">
     <div class="panel">
