feat(deploy): mirror HUD logo changes, add center image rendering and assets to github-deploy\n\nWhy:\n- Keep GitHub Pages deploy in sync with root site visuals and features.\n\nWhat:\n- github-deploy/index.html: use logo mark + text header; add data-center-image attribute to canvas.\n- github-deploy/css/styles.css: add .logo-mark/.logo-text and enlarge header styling.\n- github-deploy/js/world.js: load center image, implement drawCenterImage(), and render it before grid.\n- github-deploy/assets: add planet-python-logo.svg and python-mark-neon.svg.\n- repo: add .gitmessage.txt and configure commit.template for detailed messages.\n\nHow:\n- Project sphere center to screen, compute projected radius; clip image to circle; screen blend + radial vignette for depth; call before grid for proper layering.\n\nRisks:\n- None observed; assets are lightweight SVGs.\n\nTesting:\n- Local manual preview; verified image scales with zoom and rotates under grid; header logo displays in deploy build.

--- a/github-deploy/index.html
+++ b/github-deploy/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <div id="hud">
-    <div class="logo">PYTHON PLANET</div>
+    <div class="logo">
+      <img src="assets/planet-python-logo.svg" alt="Planet Python logo" class="logo-mark" />
+      <span class="logo-text">PYTHON PLANET</span>
+    </div>
     <div class="stats">
       <span id="xp">XP: 0</span>
       <span id="coins">Coins: 0</span>
@@ -17,7 +20,7 @@
     <div class="legend">Click a glowing node to travel • Complete a stage to unlock the next</div>
   </div>
 
-  <canvas id="world" width="1200" height="700" aria-label="3D coding planet canvas"></canvas>
+  <canvas id="world" width="1200" height="700" aria-label="3D coding planet canvas" data-center-image="assets/python-mark-neon.svg"></canvas>
 
   <div id="ui-overlay" class="hidden" aria-live="polite">
     <div class="panel">
