--- a/index.html
+++ b/index.html
@@ -30,12 +30,20 @@
     .member{ padding:14px; border-radius:12px; border:1px solid rgba(148,163,184,.16); background:linear-gradient(180deg, rgba(30,41,59,.6), rgba(2,6,23,.6)) }
     .footer{ padding:26px 28px; color:#94a3b8; border-top:1px solid rgba(148,163,184,.12) }
     @media (max-width: 900px){ .hero{ grid-template-columns: 1fr; } }
+    /* --- Futuristic 3D + background animation additions --- */
+    .starfield{ position:fixed; inset:0; z-index:0; background:#050814 }
+    body, .lp-header, main{ position:relative; z-index:1 }
+    .hero .panel{ position:relative; perspective:1000px; overflow:hidden }
+    .planet-3d{ transform-style:preserve-3d; will-change:transform; transition:transform 400ms cubic-bezier(.2,.8,.2,1) }
+    .planet-3d img{ width:100%; max-width:420px; display:block; margin:0 auto; filter: drop-shadow(0 0 25px rgba(56,189,248,.55)); transform: translateZ(60px); animation: slow-rotate 30s linear infinite }
+    @keyframes slow-rotate{ from{ transform: translateZ(60px) rotateZ(0) } to{ transform: translateZ(60px) rotateZ(360deg) } }
   </style>
 </head>
 <body>
+  <canvas id="starfield" class="starfield" aria-hidden="true"></canvas>
   <header class="lp-header">
     <div class="lp-brand">
-      <img src="assets/planet-python-logo.svg" alt="Planet Python" />
+      <img src="assets/planet-python-logo-neon.svg" alt="Planet Python" />
       <span>Planet Python</span>
     </div>
     <nav class="lp-cta">
@@ -54,7 +62,9 @@
         </div>
       </div>
       <div class="panel">
-        <img src="assets/planet-python-logo.svg" alt="Planet" style="width:100%; max-width:420px; display:block; margin: 0 auto; filter: drop-shadow(0 0 25px rgba(56,189,248,.35))" />
+        <div class="planet-3d">
+          <img src="assets/planet-python-logo-neon.svg" alt="Planet" />
+        </div>
       </div>
     </section>
 
@@ -100,7 +110,47 @@
   <footer class="footer">© <span id="year"></span> Planet Python Team • <a href="learn.html">Start Learning</a></footer>
 
   <script>
+    // Keep existing year script
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // --- Lightweight starfield animation (futuristic background) ---
+    (function(){
+      const c = document.getElementById('starfield');
+      if(!c) return;
+      const ctx = c.getContext('2d', {alpha:true});
+      let w=0,h=0, stars=[]; const STAR_COUNT = 140; const SPEED=0.02; const DEPTH=6;
+      function resize(){ w= c.width = window.innerWidth; h = c.height = window.innerHeight; }
+      window.addEventListener('resize', resize); resize();
+      function resetStar(s){ s.x = (Math.random()*2-1)*w; s.y = (Math.random()*2-1)*h; s.z = Math.random()*DEPTH + 0.2; s.size = Math.random()*1.6+0.2; }
+      for(let i=0;i<STAR_COUNT;i++){ stars.push({x:0,y:0,z:0,size:1}); resetStar(stars[i]); }
+      let mx=0,my=0; window.addEventListener('pointermove',e=>{ mx=(e.clientX/w-0.5); my=(e.clientY/h-0.5); });
+      function tick(){
+        ctx.clearRect(0,0,w,h);
+        for(const s of stars){
+          s.z -= SPEED; if(s.z<=0.05) resetStar(s);
+          const k = 128/s.z; const x = w/2 + (s.x+mx*200)/s.z; const y = h/2 + (s.y+my*200)/s.z;
+          const alpha = Math.max(0.1, 1 - s.z/DEPTH);
+          ctx.fillStyle = `rgba(163, 230, 255, ${alpha})`;
+          ctx.beginPath(); ctx.arc(x,y, s.size*(1.6/Math.max(0.6,s.z)), 0, Math.PI*2); ctx.fill();
+        }
+        requestAnimationFrame(tick);
+      }
+      tick();
+    })();
+
+    // --- Interactive tilt for the neon planet ---
+    (function(){
+      const panel = document.querySelector('.panel');
+      const card = panel && panel.querySelector('.planet-3d');
+      if(!panel||!card) return;
+      panel.addEventListener('pointermove', e=>{
+        const r = panel.getBoundingClientRect();
+        const x = (e.clientX - r.left)/r.width; const y = (e.clientY - r.top)/r.height;
+        const rx = (0.5 - y)*12; const ry = (x - 0.5)*14;
+        card.style.transform = `rotateX(${rx}deg) rotateY(${ry}deg)`;
+      });
+      panel.addEventListener('pointerleave', ()=>{ card.style.transform = 'rotateX(0) rotateY(0)'; });
+    })();
   </script>
 </body>
 </html>
