--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     .member{ padding:14px; border-radius:12px; border:1px solid rgba(148,163,184,.16); background:linear-gradient(180deg, rgba(30,41,59,.6), rgba(2,6,23,.6)) }
     .footer{ padding:26px 28px; color:#94a3b8; border-top:1px solid rgba(148,163,184,.12) }
     @media (max-width: 900px){ .hero{ grid-template-columns: 1fr; } }
-    /* --- Futuristic 3D + background animation additions --- */
+    /* --- Futuristic 3D background --- */
     .starfield{ position:fixed; inset:0; z-index:0; background:#050814 }
     body, .lp-header, main{ position:relative; z-index:1 }
-    .hero .panel{ position:relative; perspective:1000px; overflow:hidden }
-    .planet-3d{ transform-style:preserve-3d; will-change:transform; transition:transform 400ms cubic-bezier(.2,.8,.2,1) }
-    .planet-3d img{ width:100%; max-width:420px; display:block; margin:0 auto; filter: drop-shadow(0 0 25px rgba(56,189,248,.55)); transform: translateZ(60px); animation: slow-rotate 30s linear infinite }
-    @keyframes slow-rotate{ from{ transform: translateZ(60px) rotateZ(0) } to{ transform: translateZ(60px) rotateZ(360deg) } }
+    /* --- Mini 3D game styles --- */
+    .game-wrap{ height:360px; border-radius:12px; overflow:hidden; position:relative; backdrop-filter: blur(2px); }
+    .mini3d{ width:100%; height:100%; display:block; background: transparent; cursor: none; }
+    @media (max-width: 900px){ .game-wrap{ height:300px } }
   </style>
 </head>
 <body>
@@ -62,8 +62,8 @@
         </div>
       </div>
       <div class="panel">
-        <div class="planet-3d">
-          <img src="assets/planet-python-logo-neon.svg" alt="Planet" />
+        <div class="game-wrap">
+          <canvas id="space-runner" class="mini3d" width="640" height="380" aria-label="Mini game: fly and dodge obstacles"></canvas>
         </div>
       </div>
     </section>
@@ -128,7 +128,7 @@
         ctx.clearRect(0,0,w,h);
         for(const s of stars){
           s.z -= SPEED; if(s.z<=0.05) resetStar(s);
-          const k = 128/s.z; const x = w/2 + (s.x+mx*200)/s.z; const y = h/2 + (s.y+my*200)/s.z;
+          const x = w/2 + (s.x+mx*200)/s.z; const y = h/2 + (s.y+my*200)/s.z;
           const alpha = Math.max(0.1, 1 - s.z/DEPTH);
           ctx.fillStyle = `rgba(163, 230, 255, ${alpha})`;
           ctx.beginPath(); ctx.arc(x,y, s.size*(1.6/Math.max(0.6,s.z)), 0, Math.PI*2); ctx.fill();
@@ -138,18 +138,65 @@
       tick();
     })();
 
-    // --- Interactive tilt for the neon planet ---
+    // --- Mini 3D: Spaceship runner (dodge obstacles) ---
     (function(){
-      const panel = document.querySelector('.panel');
-      const card = panel && panel.querySelector('.planet-3d');
-      if(!panel||!card) return;
-      panel.addEventListener('pointermove', e=>{
-        const r = panel.getBoundingClientRect();
-        const x = (e.clientX - r.left)/r.width; const y = (e.clientY - r.top)/r.height;
-        const rx = (0.5 - y)*12; const ry = (x - 0.5)*14;
-        card.style.transform = `rotateX(${rx}deg) rotateY(${ry}deg)`;
-      });
-      panel.addEventListener('pointerleave', ()=>{ card.style.transform = 'rotateX(0) rotateY(0)'; });
+      const canvas = document.getElementById('space-runner');
+      if(!canvas) return;
+      const ctx = canvas.getContext('2d');
+      let W=0,H=0,cx=0,cy=0; const dpr = window.devicePixelRatio||1;
+      function size(){
+        const r = canvas.getBoundingClientRect();
+        const w = Math.max(400, r.width||640), h = Math.max(260, r.height||380);
+        canvas.width = Math.round(w*dpr); canvas.height = Math.round(h*dpr);
+        canvas.style.width = `${r.width||w}px`; canvas.style.height = `${r.height||h}px`;
+        ctx.setTransform(dpr,0,0,dpr,0,0);
+        W=w; H=h; cx=W/2; cy=H/2;
+      }
+      window.addEventListener('resize', size); size();
+
+      const FOV = 340; const MAX_OFFSET = 80; const SPEED_Z_START=22; const SPEED_Z_MAX=50;
+      const ship = {x:0,y:0,z:2,r:10};
+      let speedZ = SPEED_Z_START; let score=0, high=0, gameOver=false, running=true;
+      let inputX=0, inputY=0; const obstacles=[];
+
+      function project(obj){ const f = FOV/obj.z; return { x: cx + obj.x*f, y: cy + obj.y*f, r: obj.size*f }; }
+      function spawn(){ const z=80+Math.random()*120; const x=(Math.random()*2-1)*MAX_OFFSET*1.1; const y=(Math.random()*2-1)*MAX_OFFSET*0.8; const size=8+Math.random()*14; obstacles.push({x,y,z,size}); }
+      for(let i=0;i<14;i++) spawn();
+
+      function reset(){ obstacles.length=0; for(let i=0;i<14;i++) spawn(); ship.x=0; ship.y=0; speedZ=SPEED_Z_START; score=0; gameOver=false; last=performance.now(); }
+
+      const keys={};
+      window.addEventListener('pointermove',e=>{ const r=canvas.getBoundingClientRect(); inputX=(e.clientX-r.left)/r.width-0.5; inputY=(e.clientY-r.top)/r.height-0.5; });
+      window.addEventListener('keydown',e=>{ keys[e.key.toLowerCase()]=true; if(gameOver&&(e.key===' '||e.key==='Enter')) reset(); });
+      window.addEventListener('keyup',e=>{ keys[e.key.toLowerCase()]=false; });
+      canvas.addEventListener('click',()=>{ if(gameOver) reset(); });
+      document.addEventListener('visibilitychange',()=>{ running=!document.hidden; if(running){ last=performance.now(); requestAnimationFrame(loop); } });
+
+      function update(dt){
+        const kx=(keys['arrowright']||keys['d']?1:0)-(keys['arrowleft']||keys['a']?1:0);
+        const ky=(keys['arrowdown']||keys['s']?1:0)-(keys['arrowup']||keys['w']?1:0);
+        const tx=(inputX + kx*0.8)*MAX_OFFSET; const ty=(inputY + ky*0.8)*MAX_OFFSET;
+        ship.x += (tx-ship.x)*Math.min(1, dt*6); ship.y += (ty-ship.y)*Math.min(1, dt*6);
+        speedZ = Math.min(SPEED_Z_MAX, speedZ + dt*1.2); score += dt*10;
+        for(const o of obstacles){ o.z -= speedZ*dt; }
+        for(let i=obstacles.length-1;i>=0;i--){ if(obstacles[i].z < ship.z-1){ obstacles.splice(i,1); spawn(); } }
+        for(const o of obstacles){ if(o.z < ship.z + 2.5 && o.z > ship.z - 0.5){ const dx=o.x-ship.x, dy=o.y-ship.y; const rr=o.size+ship.r; if(dx*dx+dy*dy < rr*rr){ gameOver=true; high=Math.max(high, score|0); break; } } }
+      }
+
+      function draw(){
+        ctx.clearRect(0,0,W,H);
+        const g=ctx.createLinearGradient(0,0,0,H); g.addColorStop(0,'rgba(8,14,28,0.6)'); g.addColorStop(1,'rgba(8,20,40,0.9)'); ctx.fillStyle=g; ctx.fillRect(0,0,W,H);
+        ctx.beginPath(); ctx.arc(cx,cy,140,0,Math.PI*2); ctx.fillStyle='rgba(56,189,248,0.06)'; ctx.fill();
+        obstacles.sort((a,b)=>b.z-a.z);
+        for(const o of obstacles){ const p=project(o); if(p.r<1||p.x<-100||p.x>W+100||p.y<-100||p.y>H+100) continue; ctx.save(); ctx.globalAlpha=Math.max(0.2, 1-(o.z/140)); ctx.shadowColor='rgba(125,249,198,0.6)'; ctx.shadowBlur=20*(1/o.z)*80; ctx.fillStyle='rgba(125,249,198,0.85)'; ctx.beginPath(); ctx.arc(p.x,p.y,p.r,0,Math.PI*2); ctx.fill(); ctx.restore(); ctx.strokeStyle='rgba(163,230,255,0.25)'; ctx.lineWidth=Math.max(1,p.r*0.12); ctx.beginPath(); ctx.moveTo(p.x,p.y+p.r*0.2); ctx.lineTo(p.x,p.y+p.r*0.2+Math.max(5,120/(o.z+5))); ctx.stroke(); }
+        ctx.save(); ctx.translate(cx + ship.x*(FOV/ship.z), cy + ship.y*(FOV/ship.z)); ctx.rotate(ship.x*0.01); ctx.shadowColor='rgba(56,189,248,0.9)'; ctx.shadowBlur=20; ctx.fillStyle='#7ef9c6'; const s=14; ctx.beginPath(); ctx.moveTo(0,-s*1.4); ctx.lineTo(s*0.9,s); ctx.lineTo(0,s*0.6); ctx.lineTo(-s*0.9,s); ctx.closePath(); ctx.fill(); ctx.restore();
+        ctx.fillStyle='rgba(207,250,254,0.9)'; ctx.font='12px system-ui, -apple-system, Segoe UI, Roboto, Arial'; ctx.fillText(`Score: ${score|0}`,12,18); ctx.fillText(`Best: ${high|0}`,12,34);
+        if(gameOver){ ctx.fillStyle='rgba(2,6,23,0.7)'; ctx.fillRect(0,0,W,H); ctx.fillStyle='#c8f5ff'; ctx.font='bold 20px system-ui, Segoe UI, Arial'; ctx.textAlign='center'; ctx.fillText('Crashed!',cx,cy-10); ctx.font='14px system-ui'; ctx.fillText('Click or press Space to retry',cx,cy+16); ctx.textAlign='left'; }
+      }
+
+      let last=performance.now();
+      function loop(now){ if(!running) return; const dt=Math.min(0.05,(now-last)/1000); last=now; if(!gameOver) update(dt); draw(); requestAnimationFrame(loop); }
+      requestAnimationFrame(loop);
     })();
   </script>
 </body>
