feat(auth): add local registration/login and per-user progress; persist progress in world; add account page and nav; mirror deploy copies

--- a/github-deploy/learn.html
+++ b/github-deploy/learn.html
@@ -101,5 +101,6 @@ for i in range(3):
   <script src="js/world.js"></script>
   <script src="js/minigames.js"></script>
   <script src="js/ui.js"></script>
+  <script src="js/auth.js"></script>
 </body>
 </html>
