--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <title>Planet Python • Learn Python with a Game</title>
   <link rel="stylesheet" href="css/styles.css" />
   <style>
-    /* Landing page styles (scoped) */
     :root { --brand:#38bdf8; --dark:#0b1220; --muted:#a1a6b3; }
-    body{ margin:0; font-family: Inter, system-ui, Arial, sans-serif; background: radial-gradient(1200px 600px at 20% -10%, rgba(56,189,248,.25), transparent),radial-gradient(800px 400px at 80% -20%, rgba(147,51,234,.18), transparent), #0b1120; color:#e5e7eb; }
+    body{ margin:0; font-family: Inter, system-ui, Arial, sans-serif; background: #0b1120; color:#e5e7eb; }
     a{ color:inherit; text-decoration:none }
     .lp-header{ display:flex; align-items:center; justify-content:space-between; padding:20px 28px; position:sticky; top:0; background:linear-gradient(to bottom, rgba(11,17,32,.85), rgba(11,17,32,.55)); backdrop-filter: blur(10px); border-bottom:1px solid rgba(148,163,184,.12); z-index:10 }
     .lp-brand{ display:flex; align-items:center; gap:12px }
@@ -20,9 +19,9 @@
     .hero h1{ font-size: clamp(28px, 4vw, 48px); line-height:1.1; margin:0 0 14px; text-shadow: 0 10px 40px rgba(56,189,248,.2) }
     .hero p{ font-size: clamp(14px, 1.8vw, 18px); color:#cbd5e1; margin:0 0 18px }
     .hero .actions{ display:flex; gap:12px; flex-wrap:wrap }
-    .hero .primary{ padding:12px 18px; border-radius:12px; background:linear-gradient(180deg, rgba(56,189,248,.22), rgba(56,189,248,.08)); border:1px solid rgba(56,189,248,.45); color:#0b1120; font-weight:700; color:#e0f2fe }
+    .hero .primary{ padding:12px 18px; border-radius:12px; background:linear-gradient(180deg, rgba(56,189,248,.22), rgba(56,189,248,.08)); border:1px solid rgba(56,189,248,.45); font-weight:700; color:#e0f2fe }
     .hero .secondary{ padding:12px 18px; border-radius:12px; border:1px solid rgba(148,163,184,.3); color:#cbd5e1; background:linear-gradient(180deg, rgba(2,6,23,.6), rgba(2,6,23,.2)) }
-    .panel{ border:1px solid rgba(148,163,184,.16); border-radius:14px; background: radial-gradient(600px 300px at 50% -60%, rgba(56,189,248,.22), transparent), rgba(2,6,23,.6); padding:18px; }
+    .panel{ border:1px solid rgba(148,163,184,.16); border-radius:14px; background: rgba(2,6,23,.75); padding:18px; }
     .features{ display:grid; grid-template-columns: repeat(auto-fit, minmax(220px,1fr)); gap:14px; padding: 10px 28px 28px }
     .feature{ padding:14px; border-radius:12px; border:1px solid rgba(148,163,184,.16); background:linear-gradient(180deg, rgba(30,41,59,.6), rgba(2,6,23,.6)) }
     .feature h3{ margin:6px 0 8px; font-size:18px }
@@ -30,17 +29,22 @@
     .member{ padding:14px; border-radius:12px; border:1px solid rgba(148,163,184,.16); background:linear-gradient(180deg, rgba(30,41,59,.6), rgba(2,6,23,.6)) }
     .footer{ padding:26px 28px; color:#94a3b8; border-top:1px solid rgba(148,163,184,.12) }
     @media (max-width: 900px){ .hero{ grid-template-columns: 1fr; } }
-    /* --- Futuristic 3D background --- */
-    .starfield{ position:fixed; inset:0; z-index:0; background:#050814 }
-    body, .lp-header, main{ position:relative; z-index:1 }
-    /* --- Mini 3D game styles --- */
-    .game-wrap{ height:360px; border-radius:12px; overflow:hidden; position:relative; backdrop-filter: blur(2px); }
-    .mini3d{ width:100%; height:100%; display:block; background: transparent; cursor: none; }
-    @media (max-width: 900px){ .game-wrap{ height:300px } }
+
+    /* Simple terminal panel */
+    .terminal{ height:360px; border-radius:12px; background:#020617; border:1px solid rgba(148,163,184,.18); box-shadow: 0 10px 30px rgba(0,0,0,.35) inset; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; color:#c8f5ff; position:relative; padding:14px; }
+    .term-title{ display:flex; align-items:center; gap:8px; color:#94a3b8; font-size:12px; margin-bottom:8px }
+    .term-dots{ display:flex; gap:6px }
+    .dot{ width:10px; height:10px; border-radius:50%; background:#475569 }
+    .dot.red{ background:#ef4444 } .dot.yellow{ background:#f59e0b } .dot.green{ background:#22c55e }
+    .term-body{ position:absolute; inset:40px 14px 14px 14px; overflow:auto; }
+    .line{ white-space:pre; line-height:1.6 }
+    .prompt{ color:#7dd3fc }
+    .caret{ display:inline-block; width:10px; height:1.2em; background:#c8f5ff; margin-left:2px; animation: blink 1s steps(1) infinite; vertical-align:bottom }
+    @keyframes blink{ 50%{ opacity:0 } }
+    @media (max-width: 900px){ .terminal{ height:300px } }
   </style>
 </head>
 <body>
-  <canvas id="starfield" class="starfield" aria-hidden="true"></canvas>
   <header class="lp-header">
     <div class="lp-brand">
       <img src="assets/planet-python-logo-neon.svg" alt="Planet Python" />
@@ -48,6 +52,7 @@
     </div>
     <nav class="lp-cta">
       <a href="learn.html" title="Start Learning">Start Learning →</a>
+      <a href="account.html" title="Sign In or Register">Sign In</a>
     </nav>
   </header>
 
@@ -62,8 +67,17 @@
         </div>
       </div>
       <div class="panel">
-        <div class="game-wrap">
-          <canvas id="space-runner" class="mini3d" width="640" height="380" aria-label="Mini game: fly and dodge obstacles"></canvas>
+        <div class="terminal" aria-label="Terminal-like panel">
+          <div class="term-title">
+            <div class="term-dots">
+              <span class="dot red"></span><span class="dot yellow"></span><span class="dot green"></span>
+            </div>
+            <span>planet-python — bash</span>
+          </div>
+          <div class="term-body">
+            <div class="line"><span class="prompt">planet-python:~$</span> <span>_</span></div>
+            <div class="line"><span class="prompt">planet-python:~$</span> <span></span><span class="caret" aria-hidden="true"></span></div>
+          </div>
         </div>
       </div>
     </section>
@@ -110,103 +124,7 @@
   <footer class="footer">© <span id="year"></span> Planet Python Team • <a href="learn.html">Start Learning</a></footer>
 
   <script>
-    // Keep existing year script
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    // --- Lightweight starfield animation (futuristic background) ---
-    (function(){
-      const c = document.getElementById('starfield');
-      if(!c) return;
-      const ctx = c.getContext('2d', {alpha:true});
-      let w=0,h=0, stars=[]; const STAR_COUNT = 140; const SPEED=0.02; const DEPTH=6;
-      function resize(){ w= c.width = window.innerWidth; h = c.height = window.innerHeight; }
-      window.addEventListener('resize', resize); resize();
-      function resetStar(s){ s.x = (Math.random()*2-1)*w; s.y = (Math.random()*2-1)*h; s.z = Math.random()*DEPTH + 0.2; s.size = Math.random()*1.6+0.2; }
-      for(let i=0;i<STAR_COUNT;i++){ stars.push({x:0,y:0,z:0,size:1}); resetStar(stars[i]); }
-      let mx=0,my=0; window.addEventListener('pointermove',e=>{ mx=(e.clientX/w-0.5); my=(e.clientY/h-0.5); });
-      function tick(){
-        ctx.clearRect(0,0,w,h);
-        for(const s of stars){
-          s.z -= SPEED; if(s.z<=0.05) resetStar(s);
-          const x = w/2 + (s.x+mx*200)/s.z; const y = h/2 + (s.y+my*200)/s.z;
-          const alpha = Math.max(0.1, 1 - s.z/DEPTH);
-          ctx.fillStyle = `rgba(163, 230, 255, ${alpha})`;
-          ctx.beginPath(); ctx.arc(x,y, s.size*(1.6/Math.max(0.6,s.z)), 0, Math.PI*2); ctx.fill();
-        }
-        requestAnimationFrame(tick);
-      }
-      tick();
-    })();
-
-    // --- Mini 3D: Spaceship runner (dodge obstacles) ---
-    (function(){
-      const canvas = document.getElementById('space-runner');
-      if(!canvas) return;
-      const ctx = canvas.getContext('2d');
-      let W=0,H=0,cx=0,cy=0; const dpr = window.devicePixelRatio||1;
-      // Load spaceship sprite
-      const shipImg = new Image(); let shipReady=false; shipImg.onload=()=>shipReady=true; shipImg.src = 'assets/spaceship-neon.svg';
-      function size(){
-        const r = canvas.getBoundingClientRect();
-        const w = Math.max(400, r.width||640), h = Math.max(260, r.height||380);
-        canvas.width = Math.round(w*dpr); canvas.height = Math.round(h*dpr);
-        canvas.style.width = `${r.width||w}px`; canvas.style.height = `${r.height||h}px`;
-        ctx.setTransform(dpr,0,0,dpr,0,0);
-        W=w; H=h; cx=W/2; cy=H/2;
-      }
-      window.addEventListener('resize', size); size();
-
-      const FOV = 340; const MAX_OFFSET = 80; const SPEED_Z_START=22; const SPEED_Z_MAX=50;
-      const ship = {x:0,y:0,z:2,r:10};
-      let speedZ = SPEED_Z_START; let score=0, high=0, gameOver=false, running=true;
-      let inputX=0, inputY=0; const obstacles=[];
-      function projectPoint(x,y,z){ const f = FOV/Math.max(0.0001,z); return { x: cx + x*f, y: cy + y*f }; }
-      function drawRails(){
-        const near = ship.z+1, far = 180, steps = 18; ctx.save(); ctx.strokeStyle='rgba(99,255,199,0.45)'; ctx.lineWidth=1.2; ctx.setLineDash([6,6]); let prev=null;
-        for(let i=0;i<=steps;i++){ const z= near + (far-near)*(i/steps); const f=FOV/z; const l={x:cx+(-MAX_OFFSET)*f,y:cy}; const r={x:cx+(MAX_OFFSET)*f,y:cy}; const t={x:cx,y:cy+(-MAX_OFFSET)*f}; const b={x:cx,y:cy+(MAX_OFFSET)*f}; if(prev){ ctx.beginPath(); ctx.moveTo(prev.l.x,prev.l.y); ctx.lineTo(l.x,l.y); ctx.moveTo(prev.r.x,prev.r.y); ctx.lineTo(r.x,r.y); ctx.moveTo(prev.t.x,prev.t.y); ctx.lineTo(t.x,t.y); ctx.moveTo(prev.b.x,prev.b.y); ctx.lineTo(b.x,b.y); ctx.stroke(); } prev={l,r,t,b}; }
-        ctx.setLineDash([]); const nz=8, nf=FOV/nz; const bx=cx-MAX_OFFSET*nf, by=cy-MAX_OFFSET*nf, bw=MAX_OFFSET*nf*2; ctx.strokeStyle='rgba(163,230,255,0.55)'; ctx.lineWidth=1.6; ctx.strokeRect(bx,by,bw,bw); ctx.restore();
-      }
-      function drawBlock(o){ const f=FOV/o.z; const px=cx+o.x*f; const py=cy+o.y*f; const s=Math.max(6, o.size*1.6*f); if(px<-120||px>W+120||py<-120||py>H+120) return; const w=s,h=s; const ox=-(px-cx)*0.18, oy=-(py-cy)*0.18; ctx.save(); const depthAlpha=Math.max(0.35,1-(o.z/160)); ctx.globalAlpha=depthAlpha; ctx.shadowColor='rgba(125,249,198,0.6)'; ctx.shadowBlur=18*(1/o.z)*60; ctx.fillStyle='rgba(0,255,180,0.35)'; ctx.fillRect(px-w/2,py-h/2,w,h); ctx.beginPath(); ctx.moveTo(px-w/2,py-h/2); ctx.lineTo(px+w/2,py-h/2); ctx.lineTo(px+w/2+ox,py-h/2+oy); ctx.lineTo(px-w/2+ox,py-h/2+oy); ctx.closePath(); ctx.fillStyle='rgba(125,249,198,0.55)'; ctx.fill(); ctx.beginPath(); ctx.moveTo(px+w/2,py-h/2); ctx.lineTo(px+w/2+ox,py-h/2+oy); ctx.lineTo(px+w/2+ox,py+h/2+oy); ctx.lineTo(px+w/2,py+h/2); ctx.closePath(); ctx.fillStyle='rgba(0,200,160,0.32)'; ctx.fill(); ctx.beginPath(); ctx.moveTo(px-w/2,py-h/2); ctx.lineTo(px-w/2+ox,py-h/2+oy); ctx.lineTo(px-w/2+ox,py+h/2+oy); ctx.lineTo(px-w/2,py+h/2); ctx.closePath(); ctx.fillStyle='rgba(0,200,160,0.28)'; ctx.fill(); ctx.strokeStyle='rgba(163,230,255,0.35)'; ctx.lineWidth=Math.max(1,s*0.06); ctx.strokeRect(px-w/2,py-h/2,w,h); ctx.beginPath(); ctx.moveTo(px-w/2,py-h/2); ctx.lineTo(px-w/2+ox,py-h/2+oy); ctx.moveTo(px+w/2,py-h/2); ctx.lineTo(px+w/2+ox,py-h/2+oy); ctx.moveTo(px-w/2,py+h/2); ctx.lineTo(px-w/2+ox,py+h/2+oy); ctx.moveTo(px+w/2,py+h/2); ctx.lineTo(px+w/2+ox,py+h/2+oy); ctx.stroke(); ctx.restore(); }
-      function spawn(){ const z=80+Math.random()*120; const x=(Math.random()*2-1)*MAX_OFFSET*1.1; const y=(Math.random()*2-1)*MAX_OFFSET*0.8; const size=8+Math.random()*14; obstacles.push({x,y,z,size}); }
-      for(let i=0;i<14;i++) spawn();
-
-      function reset(){ obstacles.length=0; for(let i=0;i<14;i++) spawn(); ship.x=0; ship.y=0; speedZ=SPEED_Z_START; score=0; gameOver=false; last=performance.now(); }
-
-      const keys={};
-      // Arrow-keys-only controls: disable mouse steering
-      inputX = 0; inputY = 0;
-      window.addEventListener('keydown',e=>{ keys[e.key.toLowerCase()]=true; if(gameOver&&(e.key===' '||e.key==='Enter')) reset(); });
-      window.addEventListener('keyup',e=>{ keys[e.key.toLowerCase()]=false; });
-      canvas.addEventListener('click',()=>{ if(gameOver) reset(); });
-      document.addEventListener('visibilitychange',()=>{ running=!document.hidden; if(running){ last=performance.now(); requestAnimationFrame(loop); } });
-
-      function update(dt){
-      // Arrow keys only
-      const kx=(keys['arrowright']?1:0)-(keys['arrowleft']?1:0);
-      const ky=(keys['arrowdown']?1:0)-(keys['arrowup']?1:0);
-      const tx=kx*MAX_OFFSET; const ty=ky*MAX_OFFSET;
-         ship.x += (tx-ship.x)*Math.min(1, dt*6); ship.y += (ty-ship.y)*Math.min(1, dt*6);
-         ship.x = Math.max(-MAX_OFFSET, Math.min(MAX_OFFSET, ship.x));
-         ship.y = Math.max(-MAX_OFFSET, Math.min(MAX_OFFSET, ship.y));
-         speedZ = Math.min(SPEED_Z_MAX, speedZ + dt*1.2); score += dt*10;
-         for(const o of obstacles){ o.z -= speedZ*dt; }
-         for(let i=obstacles.length-1;i>=0;i--){ if(obstacles[i].z < ship.z-1){ obstacles.splice(i,1); spawn(); } }
-         for(const o of obstacles){ if(o.z < ship.z + 2.5 && o.z > ship.z - 0.5){ const dx=o.x-ship.x, dy=o.y-ship.y; const rr=o.size+ship.r; if(dx*dx+dy*dy < rr*rr){ gameOver=true; high=Math.max(high, score|0); break; } } }
-      }
-
-      function draw(){
-        ctx.clearRect(0,0,W,H);
-        const g=ctx.createLinearGradient(0,0,0,H); g.addColorStop(0,'rgba(8,14,28,0.6)'); g.addColorStop(1,'rgba(8,20,40,0.9)'); ctx.fillStyle=g; ctx.fillRect(0,0,W,H);
-        ctx.beginPath(); ctx.arc(cx,cy,140,0,Math.PI*2); ctx.fillStyle='rgba(56,189,248,0.06)'; ctx.fill();
-        drawRails();
-        obstacles.sort((a,b)=>b.z-a.z); for(const o of obstacles){ drawBlock(o); }
-        ctx.save(); const sp = projectPoint(ship.x, ship.y, ship.z); ctx.translate(sp.x, sp.y); const tilt=(ship.x/MAX_OFFSET)*0.25; ctx.rotate(tilt); const shipScale = Math.min(W,H)/640; const sw=120*shipScale, sh=80*shipScale; if(shipReady){ ctx.drawImage(shipImg,-sw/2,-sh/2,sw,sh);} else { ctx.shadowColor='rgba(56,189,248,0.9)'; ctx.shadowBlur=20; ctx.fillStyle='#7ef9c6'; const s=14; ctx.beginPath(); ctx.moveTo(0,-s*1.4); ctx.lineTo(s*0.9,s); ctx.lineTo(0,s*0.6); ctx.lineTo(-s*0.9,s); ctx.closePath(); ctx.fill(); } ctx.restore();
-      }
-
-      let last=performance.now();
-      function loop(now){ if(!running) return; const dt=Math.min(0.05,(now-last)/1000); last=now; if(!gameOver) update(dt); draw(); requestAnimationFrame(loop); }
-      requestAnimationFrame(loop);
-    })();
   </script>
 </body>
 </html>
