--- a/learn.html
+++ b/learn.html
@@ -101,5 +101,6 @@ for i in range(3):
   <script src="js/world.js"></script>
   <script src="js/minigames.js"></script>
   <script src="js/ui.js"></script>
+  <script src="js/auth.js"></script>
 </body>
 </html>
