fix: normalize Faija image file name to faija.jpg across source and deploy; stage pending changes

--- a/github-deploy/index.html
+++ b/github-deploy/index.html
@@ -63,7 +63,7 @@
         <p>Navigate a stylized world, solve minigames, and level up. Built by a small team passionate about making code fun and approachable.</p>
         <div class="actions">
           <a href="learn.html" class="primary">Play & Learn</a>
-          <a href="#team" class="secondary">Meet the Team</a>
+          <a href="team.html" class="secondary">Meet the Team</a>
         </div>
       </div>
       <div class="panel">
@@ -101,24 +101,7 @@
       </article>
     </section>
 
-    <section id="team" class="team">
-      <div class="member">
-        <h3>Team Member 1</h3>
-        <p>Role: Project Lead & Developer</p>
-      </div>
-      <div class="member">
-        <h3>Team Member 2</h3>
-        <p>Role: Game Design & UX</p>
-      </div>
-      <div class="member">
-        <h3>Team Member 3</h3>
-        <p>Role: Curriculum & Content</p>
-      </div>
-      <div class="member">
-        <h3>Team Member 4</h3>
-        <p>Role: QA & Community</p>
-      </div>
-    </section>
+
   </main>
 
   <footer class="footer">© <span id="year"></span> Planet Python Team • <a href="learn.html">Start Learning</a></footer>
