fix(team): Correct name to Faiza and normalize image filename to faiza.jpg across source and deploy

--- a/github-deploy/team.html
+++ b/github-deploy/team.html
@@ -72,16 +72,16 @@
        </div>
 
 
-        <!-- Faija Jui (Writer & Tester) -->
+        <!-- Faiza Jui (Writer & Tester) -->
         <div class="member" tabindex="0">
           <div class="card-inner">
             <div class="card-face card-front">
-              <img class="photo" src="assets/team/faija.jpg" alt="Faija Jui" loading="lazy" onerror="this.src='assets/python-mark-neon.svg'; this.classList.add('svg-fallback');" />
-              <h3>Faija Jui</h3>
+              <img class="photo" src="assets/team/faiza.jpg" alt="Faiza Jui" loading="lazy" onerror="this.src='assets/python-mark-neon.svg'; this.classList.add('svg-fallback');" />
+              <h3>Faiza Jui</h3>
               <p>Writer & Tester</p>
             </div>
             <div class="card-face card-back">
-              <h3>About Faija</h3>
+              <h3>About Faiza</h3>
               <p>Writes and maintains clear, up-to-date documentation (logs and meeting notes). Thoroughly tests the website to surface issues early and improve overall quality before launch.</p>
             </div>
           </div>
