feat(quiz): add Try in Console snippets to stages; cache-bust root learn.html scripts

--- a/learn.html
+++ b/learn.html
@@ -97,12 +97,12 @@ for i in range(3):
 
   <div id="toast" class="toast hidden"></div>
 
-  <script src="js/stages.js"></script>
-  <script src="js/world.js"></script>
-  <script src="js/minigames.js"></script>
+  <script src="js/stages.js?v=1813607"></script>
+  <script src="js/world.js?v=1813607"></script>
+  <script src="js/minigames.js?v=1813607"></script>
   <!-- Load Pyodide (real Python in the browser) -->
   <script src="https://cdn.jsdelivr.net/pyodide/v0.25.1/full/pyodide.js"></script>
-  <script src="js/ui.js"></script>
-  <script src="js/auth.js"></script>
+  <script src="js/ui.js?v=1813607"></script>
+  <script src="js/auth.js?v=1813607"></script>
 </body>
 </html>
